Fix center alignment issue on day slider

--- a/src/app/v2/components/time-line-item/time-line-item.component.scss
+++ b/src/app/v2/components/time-line-item/time-line-item.component.scss
@@ -17,6 +17,8 @@
   background-color: rgba(#000, 0.15);
   width: 100%;
   flex: 1;
+  margin-left: auto;
+  margin-right: auto;
 
   &-header {
     height: 20px;
